🔨 :hammer: [Fix] Not y aligned items

--- a/src/components/CreatePost/ElementItem/style.module.css
+++ b/src/components/CreatePost/ElementItem/style.module.css
@@ -8,6 +8,7 @@
 .elementItemTitle {
   cursor: pointer;
   display: flex;
+  align-items: center;
 }
 
 .elementItemIcon {
