--- a/src/components/Sidebar/NavItem/style.module.css
+++ b/src/components/Sidebar/NavItem/style.module.css
@@ -5,7 +5,9 @@
 }
 
 .navItemIcon {
-  margin: 15px;
+  margin: 18px;
+  align-items: center;
+  display: flex;
 }
 
 @media (max-width: 535px) {
